--- a/THK_Chill_Music_Corner/app/src/main/res/layout/activity_main.xml
+++ b/THK_Chill_Music_Corner/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <com.realgear.multislidinguppanel.MultiSlidingUpPanelLayout
         android:id="@+id/root_sliding_up_panel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@mipmap/ic_launcher">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/root_view_pager"
