--- a/THK_Chill_Music_Corner/app/src/main/res/menu/navigation_bar_tabs.xml
+++ b/THK_Chill_Music_Corner/app/src/main/res/menu/navigation_bar_tabs.xml
@@ -2,14 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/tab_home"
-        android:icon="@drawable/home_24px"
+        android:icon="@drawable/ic_home"
         android:title="Home"/>
     <item
+        android:id="@+id/tab_forYou"
+        android:icon="@drawable/ic_personal"
+        android:title="4U"/>
+    <item
+        android:id="@+id/tab_corner"
+        android:icon="@drawable/ic_share_music"
+        android:title="Corner"/>
+    <item
         android:id="@+id/tab_library"
-        android:icon="@drawable/library_books_24px"
+        android:icon="@drawable/ic_library"
         android:title="Library"/>
     <item
-        android:id="@+id/tab_settings"
-        android:icon="@drawable/settings_24px"
-        android:title="Settings"/>
+        android:id="@+id/tab_Profile"
+        android:icon="@drawable/ic_me"
+        android:title="Profile"/>
 </menu>
