--- a/THK_Chill_Music_Corner/app/src/main/res/layout/fragment_profile.xml
+++ b/THK_Chill_Music_Corner/app/src/main/res/layout/fragment_profile.xml
@@ -2,6 +2,6 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2F00A7">
+    android:background="#48F100">
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
