--- a/THK_Chill_Music_Corner/app/src/main/res/layout/layout_media_player_view.xml
+++ b/THK_Chill_Music_Corner/app/src/main/res/layout/layout_media_player_view.xml
@@ -283,12 +283,12 @@
         android:layout_height="match_parent"
         app:layout_behavior="leveldown.kyle.extensions.bottomsheet.CustomBottomSheetBehavior"
         app:behavior_defaultState="collapsed"
-        app:behavior_peekHeight="50dp">
+        app:behavior_peekHeight="48dp">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="1dp"
+            android:layout_marginTop="20dp"
             style="@style/CustomCardViewStyle"/>
 
 
