--- a/THK_Chill_Music_Corner/app/src/main/res/layout/layout_root_navigation_bar.xml
+++ b/THK_Chill_Music_Corner/app/src/main/res/layout/layout_root_navigation_bar.xml
@@ -1,4 +1,4 @@
-f<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,7 @@ f<?xml version="1.0" encoding="utf-8"?>
     <com.realgear.readable_bottom_bar.ReadableBottomBar
         android:id="@+id/root_navigation_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/navigation_bar_height"
+        android:layout_height="48dp"
         android:background="#FFF"
         android:clickable="true"
         app:rbb_selectedTabType="text"
